--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +41,7 @@
   },
   "devDependencies": {
     "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "react-scripts": "^5.0.1"
   }
 }
