--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.0.3",
     "react-router-dom": "^6.21.1",
     "react-spinners": "^0.13.8",
+    "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
